--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
     </header>
     <main class="">
-        <section id="home" class="page-section bg-blue-50 pb-12">
+        <section id="home" class="page-section bg-blue-50">
             <div>
                 <div class="hero min-h-[90svh] lg:min-h-[70svh] "
                     style="background-image: linear-gradient(to left,rgba(0,0,0,0.1),rgba(0,0,0,0.7)),url(./assets/banner-image.png);">
@@ -101,42 +101,91 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 mt-10 gap-10">
                     <div class="card card-dash bg-base-100  relative pt-3">
                         <div class="card-body text-start p-4 w-fit h-fit">
-                            <div class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
+                            <div
+                                class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
                                 <i class="fa-regular fa-truck "></i>
                             </div>
                             <h2 class="font-bold">Fast Delivery</h2>
-                            <p class="text-xs text-[#00000080]">Get your orders delivered to your doorstep quickly and efficiently.</p>
+                            <p class="text-xs text-[#00000080]">Get your orders delivered to your doorstep quickly and
+                                efficiently.</p>
                         </div>
                     </div>
                     <div class="card card-dash bg-base-100  relative pt-3">
                         <div class="card-body text-start p-4 w-fit h-fit">
-                            <div class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
+                            <div
+                                class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
                                 <i class="fa-solid fa-headphones"></i>
                             </div>
                             <h2 class="font-bold">24/7 Support</h2>
-                            <p class="text-xs text-[#00000080]">Our support team is available around the clock to assist you.</p>
+                            <p class="text-xs text-[#00000080]">Our support team is available around the clock to assist
+                                you.</p>
                         </div>
                     </div>
                     <div class="card card-dash bg-base-100  relative pt-3">
                         <div class="card-body text-start p-4 w-fit h-fit">
-                            <div class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
+                            <div
+                                class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
                                 <i class="fa-solid fa-shield-halved"></i>
                             </div>
                             <h2 class="font-bold">Secure Payment</h2>
-                            <p class="text-xs text-[#00000080]">Experience safe and secure transactions with our encrypted systems.</p>
+                            <p class="text-xs text-[#00000080]">Experience safe and secure transactions with our
+                                encrypted systems.</p>
                         </div>
                     </div>
                     <div class="card card-dash bg-base-100  relative pt-3">
                         <div class="card-body text-start p-4 w-fit h-fit">
-                            <div class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
+                            <div
+                                class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
                                 <i class="fa-solid fa-repeat"></i>
                             </div>
                             <h2 class="font-bold">Easy Returns</h2>
-                            <p class="text-xs text-[#00000080]">Not satisfied? Return your products easily within 30 days.</p>
+                            <p class="text-xs text-[#00000080]">Not satisfied? Return your products easily within 30
+                                days.</p>
                         </div>
                     </div>
-                    
+
                 </div>
+            </div>
+            <div>
+                <footer
+                    class="footer sm:footer-horizontal bg-base-200 text-base-content py-10 mb-0 bg-gray-900 text-white">
+                    <div class="w-11/12 lg:w-8/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 text-xs">
+                        <aside class="w-fit">
+                            <a class="font-bold text-xl text-blue-700">SwiftCart</a>
+                            <p>
+                                Your one-stop shop for all your fashion
+                                and lfestyle needs. Quality products, fast
+                                delivery, and excellent support
+                            </p>
+                        </aside>
+                        <nav class="flex flex-col space-y-2 w-fit">
+                            <h6 class="footer-title">Quick Links</h6>
+                            <a class="link link-hover">Home</a>
+                            <a class="link link-hover">Product</a>
+                            <a class="link link-hover">About</a>
+                            <a class="link link-hover">Contacts</a>
+                        </nav>
+                        <nav class="flex flex-col space-y-2 w-fit">
+                            <h6 class="footer-title">Support</h6>
+                            <a class="link link-hover">FAQ</a>
+                            <a class="link link-hover">Shipping</a>
+                            <a class="link link-hover">Return</a>
+                            <a class="link link-hover">Privacy policy</a>
+                        </nav>
+                        <form>
+                            <h6 class="footer-title space-y-2">SUBSCRIBE TO OUR NEWSLETTER</h6>
+                            <fieldset class="w-fit">
+                                <label>The latest news, articles, and resources,sent to your inbox weekly.
+                                </label>
+                                <div class="join mt-2 text-black text-xs">
+                                    <input type="text" placeholder="Enter your email"
+                                        class="input input-bordered join-item" />
+                                    <button class="btn btn-primary join-item w-fit ">Subscribe</button>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+                </footer>
             </div>
         </section>
         <section id="product" class="page-section hidden">
