--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
     </header>
     <main class="">
-        <section id="home" class="page-section bg-blue-50">
+        <section id="home" class="page-section">
             <div>
                 <div class="hero min-h-[90svh] lg:min-h-[70svh] "
                     style="background-image: linear-gradient(to left,rgba(0,0,0,0.1),rgba(0,0,0,0.7)),url(./assets/banner-image.png);">
@@ -95,61 +95,73 @@
                     </div>
                 </div>
             </div>
-            <div class="my-12 w-11/12 lg:w-8/12 mx-auto text-center ">
-                <h1 class="text-3xl font-bold text-black">Why Choose Us</h1>
-                <p class="my-2 text-[#00000080]">We provide the best shopping experience with top notch services.</p>
-                <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 mt-10 gap-10">
-                    <div class="card card-dash bg-base-100  relative pt-3">
-                        <div class="card-body text-start p-4 w-fit h-fit">
-                            <div
-                                class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
-                                <i class="fa-regular fa-truck "></i>
+            <div class="bg-blue-50">
+                <div class="py-12 w-11/12 lg:w-8/12 mx-auto text-center ">
+                    <h1 class="text-3xl font-bold text-black">Why Choose Us</h1>
+                    <p class="my-2 text-[#00000080]">We provide the best shopping experience with top notch services.
+                    </p>
+                    <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 mt-10 gap-10">
+                        <div class="card card-dash bg-base-100  relative pt-3">
+                            <div class="card-body text-start p-4 w-fit h-fit">
+                                <div
+                                    class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
+                                    <i class="fa-regular fa-truck "></i>
+                                </div>
+                                <h2 class="font-bold">Fast Delivery</h2>
+                                <p class="text-xs text-[#00000080]">Get your orders delivered to your doorstep quickly
+                                    and
+                                    efficiently.</p>
                             </div>
-                            <h2 class="font-bold">Fast Delivery</h2>
-                            <p class="text-xs text-[#00000080]">Get your orders delivered to your doorstep quickly and
-                                efficiently.</p>
                         </div>
-                    </div>
-                    <div class="card card-dash bg-base-100  relative pt-3">
-                        <div class="card-body text-start p-4 w-fit h-fit">
-                            <div
-                                class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
-                                <i class="fa-solid fa-headphones"></i>
+                        <div class="card card-dash bg-base-100  relative pt-3">
+                            <div class="card-body text-start p-4 w-fit h-fit">
+                                <div
+                                    class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
+                                    <i class="fa-solid fa-headphones"></i>
+                                </div>
+                                <h2 class="font-bold">24/7 Support</h2>
+                                <p class="text-xs text-[#00000080]">Our support team is available around the clock to
+                                    assist
+                                    you.</p>
                             </div>
-                            <h2 class="font-bold">24/7 Support</h2>
-                            <p class="text-xs text-[#00000080]">Our support team is available around the clock to assist
-                                you.</p>
                         </div>
-                    </div>
-                    <div class="card card-dash bg-base-100  relative pt-3">
-                        <div class="card-body text-start p-4 w-fit h-fit">
-                            <div
-                                class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
-                                <i class="fa-solid fa-shield-halved"></i>
+                        <div class="card card-dash bg-base-100  relative pt-3">
+                            <div class="card-body text-start p-4 w-fit h-fit">
+                                <div
+                                    class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
+                                    <i class="fa-solid fa-shield-halved"></i>
+                                </div>
+                                <h2 class="font-bold">Secure Payment</h2>
+                                <p class="text-xs text-[#00000080]">Experience safe and secure transactions with our
+                                    encrypted systems.</p>
                             </div>
-                            <h2 class="font-bold">Secure Payment</h2>
-                            <p class="text-xs text-[#00000080]">Experience safe and secure transactions with our
-                                encrypted systems.</p>
                         </div>
-                    </div>
-                    <div class="card card-dash bg-base-100  relative pt-3">
-                        <div class="card-body text-start p-4 w-fit h-fit">
-                            <div
-                                class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
-                                <i class="fa-solid fa-repeat"></i>
+                        <div class="card card-dash bg-base-100  relative pt-3">
+                            <div class="card-body text-start p-4 w-fit h-fit">
+                                <div
+                                    class="border-2 border-white bg-blue-50 text-blue-800 shadow-md rounded-md flex items-center justify-center w-10 h-10 absolute -top-6">
+                                    <i class="fa-solid fa-repeat"></i>
+                                </div>
+                                <h2 class="font-bold">Easy Returns</h2>
+                                <p class="text-xs text-[#00000080]">Not satisfied? Return your products easily within 30
+                                    days.</p>
                             </div>
-                            <h2 class="font-bold">Easy Returns</h2>
-                            <p class="text-xs text-[#00000080]">Not satisfied? Return your products easily within 30
-                                days.</p>
                         </div>
+
                     </div>
+                </div>
+            </div>
+            <div class="w-11/12 lg:w-8/12 mx-auto py-10">
+                <h1 class="text-3xl font-bold mb-6">Trending Now</h1>
+                <div id="products" class="grid grid-cols-1 lg:grid-cols-3 gap-5 ">
 
                 </div>
             </div>
             <div>
                 <footer
                     class="footer sm:footer-horizontal bg-base-200 text-base-content py-10 mb-0 bg-gray-900 text-white">
-                    <div class="w-11/12 lg:w-8/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 text-xs">
+                    <div
+                        class="w-11/12 lg:w-8/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 text-xs">
                         <aside class="w-fit">
                             <a class="font-bold text-xl text-blue-700">SwiftCart</a>
                             <p>
@@ -177,13 +189,48 @@
                             <fieldset class="w-fit">
                                 <label>The latest news, articles, and resources,sent to your inbox weekly.
                                 </label>
-                                <div class="join mt-2 text-black text-xs">
+                                <div class="lg:flex gap-2 mt-2 text-black text-xs">
                                     <input type="text" placeholder="Enter your email"
-                                        class="input input-bordered join-item" />
-                                    <button class="btn btn-primary join-item w-fit ">Subscribe</button>
+                                        class="input input-bordered w-full lg:w-3/5" />
+                                    <button class="btn btn-primary w-full lg:w-2/5 mt-2 lg:mt-0">Subscribe</button>
                                 </div>
                             </fieldset>
                         </form>
+                    </div>
+
+                </footer>
+                <div class="bg-gray-900">
+                    <div class="w-11/12 lg:w-8/12 mx-auto">
+                        <hr class="border-t border-white/30" />
+                    </div>
+                </div>
+                <footer
+                    class="footer sm:footer-horizontal bg-neutral text-neutral-content items-center py-4 bg-gray-900 text-white">
+                    <div
+                        class="w-11/12 lg:w-8/12 mx-auto flex flex-col-reverse lg:flex-row lg:items-center lg:justify-between">
+
+                        <aside class="grid-flow-col items-center">
+
+                            <p>© 2025 SwiftCart, Inc. All rights reserved.
+                            </p>
+                        </aside>
+                        <nav class="flex gap-5 md:place-self-center md:justify-self-end">
+                            <a>
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                            <a>
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                            <a>
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                            <a>
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                            <a>
+                                <i class="fa-solid fa-envelope"></i>
+                            </a>
+                        </nav>
                     </div>
                 </footer>
             </div>
@@ -197,6 +244,23 @@
         <section id="contact" class="page-section hidden">
 
         </section>
+        <dialog id="product-details-modal" class="modal">
+            <div class="modal-box max-w-lg">
+                <h3 class="modal-title font-bold text-lg"></h3>
+                <div class="modal-body"></div>
+                <div class="modal-action">
+                    <button class="btn btn-primary flex-1 text-xs">
+                        <i class="fa-solid fa-credit-card"></i> Buy Now
+                    </button>
+                    <button class="btn btn-primary flex-1 text-xs">
+                        <i class="fa-solid fa-cart-shopping"></i> Add to Cart
+                    </button>
+                    <form method="dialog">
+                        <button class="btn">Close</button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
     </main>
 
 
