products page completed

--- a/index.html
+++ b/index.html
@@ -236,7 +236,94 @@
             </div>
         </section>
         <section id="product" class="page-section hidden">
+            <div class="w-11/12 lg:w-8/12 mx-auto pb-6">
+                <h1 class="text-3xl font-bold text-center my-12">Our Product</h1>
+                <div>
+                    <div id="category-list" class="flex justify-center gap-2 mb-6">
+                        <button onclick="" id="all-products" class="btn btn-sm btn-outline w-fit justify-start">All</button>
+                    </div>
+                </div>
+                <div id="show-category-products" class="grid grid-cols-1 lg:grid-cols-3 gap-5">
 
+                </div>
+            </div>
+            <div>
+                <footer
+                    class="footer sm:footer-horizontal bg-base-200 text-base-content py-10 mb-0 bg-gray-900 text-white">
+                    <div
+                        class="w-11/12 lg:w-8/12 mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-10 text-xs">
+                        <aside class="w-fit">
+                            <a class="font-bold text-xl text-blue-700">SwiftCart</a>
+                            <p>
+                                Your one-stop shop for all your fashion
+                                and lfestyle needs. Quality products, fast
+                                delivery, and excellent support
+                            </p>
+                        </aside>
+                        <nav class="flex flex-col space-y-2 w-fit">
+                            <h6 class="footer-title">Quick Links</h6>
+                            <a class="link link-hover">Home</a>
+                            <a class="link link-hover">Product</a>
+                            <a class="link link-hover">About</a>
+                            <a class="link link-hover">Contacts</a>
+                        </nav>
+                        <nav class="flex flex-col space-y-2 w-fit">
+                            <h6 class="footer-title">Support</h6>
+                            <a class="link link-hover">FAQ</a>
+                            <a class="link link-hover">Shipping</a>
+                            <a class="link link-hover">Return</a>
+                            <a class="link link-hover">Privacy policy</a>
+                        </nav>
+                        <form>
+                            <h6 class="footer-title space-y-2">SUBSCRIBE TO OUR NEWSLETTER</h6>
+                            <fieldset class="w-fit">
+                                <label>The latest news, articles, and resources,sent to your inbox weekly.
+                                </label>
+                                <div class="lg:flex gap-2 mt-2 text-black text-xs">
+                                    <input type="text" placeholder="Enter your email"
+                                        class="input input-bordered w-full lg:w-3/5" />
+                                    <button class="btn btn-primary w-full lg:w-2/5 mt-2 lg:mt-0">Subscribe</button>
+                                </div>
+                            </fieldset>
+                        </form>
+                    </div>
+
+                </footer>
+                <div class="bg-gray-900">
+                    <div class="w-11/12 lg:w-8/12 mx-auto">
+                        <hr class="border-t border-white/30" />
+                    </div>
+                </div>
+                <footer
+                    class="footer sm:footer-horizontal bg-neutral text-neutral-content items-center py-4 bg-gray-900 text-white">
+                    <div
+                        class="w-11/12 lg:w-8/12 mx-auto flex flex-col-reverse lg:flex-row lg:items-center lg:justify-between">
+
+                        <aside class="grid-flow-col items-center">
+
+                            <p>© 2025 SwiftCart, Inc. All rights reserved.
+                            </p>
+                        </aside>
+                        <nav class="flex gap-5 md:place-self-center md:justify-self-end">
+                            <a>
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                            <a>
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                            <a>
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                            <a>
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                            <a>
+                                <i class="fa-solid fa-envelope"></i>
+                            </a>
+                        </nav>
+                    </div>
+                </footer>
+            </div>
         </section>
         <section id="about" class="page-section hidden">
 
